Fix #3 popup too big on chrome & loading texts

--- a/includes/css/popup.css
+++ b/includes/css/popup.css
@@ -1,6 +1,5 @@
 html,
 body {
-	height: 100%;
 	text-align: center;
 	margin: auto;
 	width : 500px;
